<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.upoint</groupId>
  <artifactId>upoint-parent</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <packaging>pom</packaging>
  
  <properties>
	<apache.commons.lang3.version>3.17.0</apache.commons.lang3.version>
    <jdk.version>23</jdk.version>
	<java.version>23</java.version>
	<jsparrow.version>3.20.0</jsparrow.version>
    <jacoco.version>0.7.6.201602180812</jacoco.version>
	<junit.jupiter.version>5.11.0</junit.jupiter.version>
	<lombok.version>1.18.34</lombok.version>
    <h2.version>2.3.232</h2.version>
	<maven.compiler.source>23</maven.compiler.source>
	<maven.compiler.target>23</maven.compiler.target>
	<maven.compiler.version>3.1</maven.compiler.version>
	<maven.compiler.plugin.version>3.8.0</maven.compiler.plugin.version>
	<maven-surefire-plugin.version>3.0.0-M3</maven-surefire-plugin.version>
    <mariadb.client.version>3.1.4</mariadb.client.version>
    <mongo.driver.version>4.9.1</mongo.driver.version>
	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	<surefireArgLine>-Xmx1024m -XX:MaxPermSize=256m</surefireArgLine>
	<surefire.version>2.22.0</surefire.version>
  </properties>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.3.3</version>
	</parent>
  
  <dependencyManagement>
	 <dependencies>
	    <dependency>
	      <groupId>com.h2database</groupId>
	      <artifactId>h2</artifactId>
			<version>${h2.version}</version>
	      <scope>runtime</scope>
	    </dependency>
	    <dependency>
	      <groupId>org.junit.jupiter</groupId>
	      <artifactId>junit-jupiter-engine</artifactId>
		  <version>${junit.jupiter.version}</version>
		  <scope>test</scope>
	    </dependency>
		 <dependency>
			 <groupId>org.junit.jupiter</groupId>
			 <artifactId>junit-jupiter-api</artifactId>
			 <version>${junit.jupiter.version}</version>
			 <scope>test</scope>
		 </dependency>
		 <dependency>
	      <groupId>org.projectlombok</groupId>
	      <artifactId>lombok</artifactId>
		  <version>${lombok.version}</version>
		  <scope>provided</scope>
		</dependency>
		<dependency>
	    	<groupId>org.apache.commons</groupId>
	    	<artifactId>commons-lang3</artifactId>
	    </dependency>
	  
		<dependency>
		    <groupId>org.mariadb.jdbc</groupId>
		    <artifactId>mariadb-java-client</artifactId>
		    <version>${mariadb.client.version}</version>
		</dependency>
	 </dependencies>
  </dependencyManagement>
  
  <pluginRepositories>
    <pluginRepository>
      <id>jsparrow-plugin-repository</id>
      <name>jSparrow Plugin Repository</name>
      <url>https://download.jsparrow.eu/maven2/</url>
    </pluginRepository>
  </pluginRepositories>
  
  <profiles>
	  <profile>
		  <id>service</id>
		  <activation>
			  <activeByDefault>false</activeByDefault>
			  <property>
				  <name>service</name>
			  </property>
		  </activation>
		  <build>
			<pluginManagement>
		        <plugins>
		            <plugin>
		                <groupId>org.apache.maven.plugins</groupId>
		                <artifactId>maven-surefire-plugin</artifactId>
		                <version>${maven-surefire-plugin.version}</version>
		            </plugin>
		            <plugin>
		                <groupId>org.apache.maven.plugins</groupId>
		                <artifactId>maven-compiler-plugin</artifactId>
		                <version>${maven.compiler.plugin.version}</version>
		                <configuration>
		                    <release>23</release>
		                </configuration>
		            </plugin>
		        </plugins>
		    </pluginManagement>
			<plugins>
			  <plugin>
			    <groupId>eu.jsparrow</groupId>
			    <artifactId>jsparrow-maven-plugin</artifactId>
			    <version>${jsparrow.version}</version>
			  </plugin>
			  <plugin>
			    <groupId>org.springframework.boot</groupId>
			    <artifactId>spring-boot-maven-plugin</artifactId>
			  </plugin>
			  <plugin>
		        <groupId>org.jacoco</groupId>
		        <artifactId>jacoco-maven-plugin</artifactId>
		        <version>${jacoco.version}</version>
		        <executions>
		            <!-- Prepares the property pointing to the JaCoCo runtime agent which
		                is passed as VM argument when Maven the Surefire plugin is executed. -->
		          <execution>
		            <id>pre-unit-test</id>
		            <goals>
		              <goal>prepare-agent</goal>
		            </goals>
		            <configuration>
		                <!-- Sets the name of the property containing the settings for JaCoCo
		                    runtime agent. -->
		              <propertyName>surefireArgLine</propertyName>
		            </configuration>
		          </execution>
		            <!-- Ensures that the code coverage report for unit tests is created
		                after unit tests have been run. -->
		          <execution>
		            <id>post-unit-test</id>
		            <phase>test</phase>
		            <goals>
		              <goal>report</goal>
		            </goals>
		            <configuration>
		                <!-- Sets the output directory for the code coverage report. -->
		              <outputDirectory>${project.reporting.outputDirectory}/jacoco-ut</outputDirectory>
		            </configuration>
		          </execution>
		        </executions>
		      </plugin>
		      
		    </plugins>
		  </build>
	  </profile>
	  <profile>
		  <id>models</id>
		  <activation>
			  <activeByDefault>false</activeByDefault>
			  <property>
				  <name>models</name>
			  </property>
		  </activation>
		  <build>
			  <plugins>
				  <plugin>
		                <groupId>org.apache.maven.plugins</groupId>
		                <artifactId>maven-compiler-plugin</artifactId>
		                <version>${maven.compiler.plugin.version}</version>
		                <configuration>
							<source>23</source>
          					<target>23</target>
		                    <release>23</release>
		                </configuration>
		            </plugin>
			  </plugins>
		  </build>
	  </profile>
  </profiles>
  
</project>